Fix post align

--- a/style.scss
+++ b/style.scss
@@ -420,7 +420,7 @@ nav {
 }
 
 .post {
-  h1, a {
+  h1 {
     display: inline;
     vertical-align: middle;
   }
